add_subdirectory(test)
add_subdirectory(license)
add_subdirectory(service_interfaces)
add_subdirectory(crypto)
add_subdirectory(etcd)
add_subdirectory(db)
add_subdirectory(ec)
add_subdirectory(network)
add_subdirectory(coroutines)
add_subdirectory(utils)
add_subdirectory(types)
add_subdirectory(telemetry)
add_subdirectory(caches)
add_subdirectory(debug)
add_subdirectory(global_data)
