add_subdirectory(ec)
add_subdirectory(utils)
add_subdirectory(caches)
add_subdirectory(coroutines)
add_subdirectory(crypto)
add_subdirectory(types)
add_subdirectory(global_data)
add_subdirectory(telemetry)
add_subdirectory(test)
add_subdirectory(license)
add_subdirectory(network)
add_subdirectory(etcd)
add_subdirectory(service_interfaces)
add_subdirectory(db)
add_subdirectory(debug)
