add_static_and_shared(
    uh_deduplicator
    SOURCES
    deduplicator_handler.cpp
    fragmentation.cpp
    PRIVATE
    uh_debug
    uh_coroutines
    PUBLIC
    uh_telemetry
    uh_registry
    uh_dedupe_interfaces
    uh_service_interfaces
    uh_storage
    uh_types
    uh_utils
    uh_global_data
    uh_dedupe_set
    uh_network)

add_subdirectory(dedupe_set)
add_subdirectory(interfaces)
