add_subdirectory(commands)
add_subdirectory(http)
add_subdirectory(policy)
add_subdirectory(aws)

add_static_and_shared(
    uh_entrypoint
    SOURCES
    command_factory.cpp
    formats.cpp
    handler.cpp
    utils.cpp
    directory.cpp
    multipart_state.cpp
    service.cpp
    limits.cpp
    PRIVATE
    uh_telemetry
    uh_commands
    uh_iam
    uh_debug
    uh_ec
    PUBLIC
    Boost::url
    uh_deduplicator
    uh_registry
    uh_policy
    uh_http
    uh_etcd
    uh_types
    uh_utils
    uh_network
    uh_db
    uh_service_discovery
    uh_service_interfaces
    uh_global_data)
