add_library(uh_precompile_headers STATIC pch.cpp)

target_link_libraries(uh_precompile_headers
                      PUBLIC
                      Boost::log
                      Boost::url
                      Boost::filesystem
                      etcd-cpp-api
                      CLI11::CLI11
                      opentelemetry_exporter_otlp_grpc_log
                      opentelemetry_exporter_otlp_grpc
                      opentelemetry_exporter_otlp_grpc_metrics
                      opentelemetry_exporter_ostream_span
                      opentelemetry_exporter_ostream_metrics
                      zpp_bits
                      magic_enum
                      lmdbxx
                      reedsolomon
                      nlohmann_json
                      cpr::cpr)

target_precompile_headers(
    uh_precompile_headers
    PRIVATE
    <algorithm>
    <array>
    <atomic>
    <cctype>
    <charconv>
    <chrono>
    <concepts>
    <condition_variable>
    <csignal>
    <cstdint>
    <cstdlib>
    <cstring>
    <ctime>
    <deque>
    <exception>
    <filesystem>
    <format>
    <forward_list>
    <fstream>
    <functional>
    <iomanip>
    <iosfwd>
    <list>
    <map>
    <memory>
    <mutex>
    <optional>
    <ostream>
    <random>
    <ranges>
    <set>
    <shared_mutex>
    <source_location>
    <span>
    <sstream>
    <stdexcept>
    <string>
    <string_view>
    <thread>
    <tuple>
    <typeinfo>
    <unordered_map>
    <unordered_set>
    <utility>
    <variant>
    <vector>
    <cxxabi.h>
    <endian.h>
    <fcntl.h>
    <unistd.h>
    <CLI/CLI.hpp>
    <boost/algorithm/string.hpp>
    <boost/asio.hpp>
    <boost/beast.hpp>
    <boost/log/trivial.hpp>
    <boost/property_tree/ptree.hpp>
    <boost/url.hpp>
    <magic_enum/magic_enum.hpp>
    <openssl/bio.h>
    <openssl/core_names.h>
    <openssl/err.h>
    <openssl/evp.h>
    <openssl/kdf.h>
    <openssl/params.h>
    <openssl/pem.h>
    <nlohmann/json.hpp>
    <zpp_bits.h>)
