add_library(uh_common_coroutines INTERFACE awaitable_promise.h worker_pool.h context.h coro_util.h)
target_link_libraries(uh_common_coroutines INTERFACE  opentelemetry_exporter_ostream_metrics opentelemetry_exporter_otlp_grpc opentelemetry_exporter_otlp_grpc_log opentelemetry_exporter_otlp_grpc_metrics uh_common_network uh_common_types)
